--- a/public/css/products.css
+++ b/public/css/products.css
@@ -2,39 +2,39 @@ main {
   margin-top: 120px;
   padding: 20px 20px;
 }
-body{
-  background:white;
-  font-family: 'Roboto';
+body {
+  background: white;
+  font-family: "Roboto";
 }
-.titulo{
-  font-family: 'Roboto', sans-serif;
-    display: flex;
-    justify-content: flex-start;
-    font-size: 22px;
-    font-weight: 300;
-    padding: 3px 9px;
-    color: #666;
-    flex-direction: row;
-    border-bottom: 1px solid #80083F;
+.titulo {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: flex-start;
+  font-size: 22px;
+  font-weight: 300;
+  padding: 3px 9px;
+  color: #666;
+  flex-direction: row;
+  border-bottom: 1px solid #80083f;
 }
 
-.contenedor-filtro{
+.contenedor-filtro {
   display: flex;
   flex-direction: column;
   width: 100%;
   margin: 10px 40px;
 }
-.list-inline{
+.list-inline {
   display: flex;
   flex-direction: column;
   margin: 10px 0px;
 }
-.list-inline li{
+.list-inline li {
   display: flex;
   flex-direction: column;
   margin: 10px 0px;
 }
-.list-inline select{
+.list-inline select {
   width: 200px;
   height: 30px;
   border-radius: 5px;
@@ -70,8 +70,6 @@ main section article p {
   margin-bottom: 10px;
 }
 
-
-
 .etiqueta-link {
   color: black;
   text-decoration: none;
@@ -101,6 +99,7 @@ main section article p {
 .contenedor-imagen-producto {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 20em;
   width: 17em;
 }
@@ -144,7 +143,7 @@ main section article p {
   transition: all 300ms ease-in-out;
 }
 
-.recomendations-row{
+.recomendations-row {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -153,76 +152,74 @@ main section article p {
 }
 /****************** Estilos de las cajas de productos *******************/
 .box-product {
-box-shadow: none;
-border-radius: 1em;
-display: flex;
-background-color: white;
-margin: 10px
+  box-shadow: none;
+  border-radius: 1em;
+  display: flex;
+  background-color: white;
+  margin: 10px;
 }
 .box-product .div-producto:hover {
-box-shadow: 0px 0px 10px rgb(100, 100, 100);
-transition: all 300ms ease-in-out;
+  box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  transition: all 300ms ease-in-out;
 }
-.box-details{
-border-top: solid 1px lightgray;
-border-bottom-left-radius: 1em;
-border-bottom-right-radius: 1em;
-padding: 5px 15px;
-background-color: white;
-display: flex;
-flex-direction: column;
-align-items: center;
+.box-details {
+  border-top: solid 1px lightgray;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  padding: 5px 15px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .etiqueta-link {
-text-decoration: none;
-text-align: center;
-color: black;
-background-color: transparent;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  background-color: transparent;
 }
-.div-producto{
-border: solid 1px lightgray;
-max-width: 650px;
-margin: 0 auto;
-border-radius: 1em;
+.div-producto {
+  border: solid 1px lightgray;
+  max-width: 650px;
+  margin: 0 auto;
+  border-radius: 1em;
 }
-.contenedor-imagen-producto img{
-display: flex;
-justify-content: center;
-height: 15em;
-width: 13em;
-border-radius: 20px;
+.contenedor-imagen-producto img {
+  display: flex;
+  justify-content: center;
+  height: 15em;
+  width: 13em;
+  border-radius: 20px;
 }
-.product-name{
-margin-bottom: 3px;
-font-weight: 400;
-
+.product-name {
+  margin-bottom: 3px;
+  font-weight: 400;
 }
 .box-price {
-width: 90%;
-display: flex;
-justify-content: space-around;
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
 }
 .tachar-precio {
-text-decoration: line-through 1px purple;
-font-weight: 300;
-color: #666;
+  text-decoration: line-through 1px purple;
+  font-weight: 300;
+  color: #666;
 }
-.price{
-color: black;
-font-weight: 300;
+.price {
+  color: black;
+  font-weight: 300;
 }
-.box-size-wine{
-color: #666;
-font-size: 15px;
-padding-top: 4px;
-
+.box-size-wine {
+  color: #666;
+  font-size: 15px;
+  padding-top: 4px;
 }
-.box-discount{
-color: #80083F;
-font-weight: 300;
+.box-discount {
+  color: #80083f;
+  font-weight: 300;
 }
-.box-product-name{
-color: black;
+.box-product-name {
+  color: black;
 }
 
 /******************** Fin caja producto *****************************/
