--- a/src/views/products/provincias.ejs
+++ b/src/views/products/provincias.ejs
@@ -29,7 +29,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -66,7 +67,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -103,7 +105,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -140,7 +143,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -177,7 +181,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -214,7 +219,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -251,7 +257,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
@@ -288,7 +295,8 @@
                                         </div>
                                         <% if (item.dataValues.discount > 0){%>
                                           <div class="price">
-                                            $<%= item.dataValues.price - ((item.dataValues.price / 100) * item.dataValues.discount) %>
+                                            $<%= Math.floor( item.dataValues.price -
+                                            (item.dataValues.price * item.dataValues.discount) / 100 ) %>
                                           </div>
                                           <%}%>
                                         </div>
