--- a/src/views/products/index.ejs
+++ b/src/views/products/index.ejs
@@ -1,83 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <%- include("../partials/head.ejs") %> 
+    <%- include("../partials/head.ejs") %>
     <link rel="stylesheet" href="/css/products.css" />
     <link rel="stylesheet" href="/css/slides.css" />
   </head>
 
   <body>
-    <%- include("../partials/header.ejs") %> 
+    <%- include("../partials/header.ejs") %>
     <main>
       <div class="contenedor-slider">
         <ul class="slider">
           <li id="slide1">
-            <img src="/Images/slides/thumb_66951_slider_big.jpeg">
+            <img src="/Images/slides/thumb_66951_slider_big.jpeg" />
           </li>
           <li id="slide2">
-            <img src="/Images/slides/thumb_67910_slider_big.jpeg">
+            <img src="/Images/slides/thumb_67910_slider_big.jpeg" />
           </li>
           <li id="slide3">
-            <img src="/Images/slides/thumb_67911_slider_big.jpeg">
+            <img src="/Images/slides/thumb_67911_slider_big.jpeg" />
+          </li>
         </ul>
 
         <ul class="controles">
-            <li><a href="#slide1">1</a></li>
-            <li><a href="#slide2">2</a></li>
-            <li><a href="#slide3">3</a></li>
+          <li><a href="#slide1">1</a></li>
+          <li><a href="#slide2">2</a></li>
+          <li><a href="#slide3">3</a></li>
         </ul>
       </div>
 
+      <div class="display-pag" style="padding-bottom: 30px">
+        <section>
+          <div class="contenedor-todo-productos">
+            <div class="contenedor-titulo">
+              <h1 class="titulo" style="text-align: center">Destacados:</h1>
+            </div>
 
-        <div class="display-pag" style="padding-bottom: 30px">
-          <section>
-            <div class="contenedor-todo-productos">
-              <div class="contenedor-titulo">
-                <h1 class="titulo" style="text-align: center;">Destacados:</h1>
-              </div>
-  
-              <div class="recomendations-row">
-                <%products.forEach(product => {%>
-                  <div class="box-product">
-                    <a href="/products/detalles/<%= product.id %>" class="etiqueta-link">
-                      <div class="div-producto">
-                        <div class="contenedor-imagen-producto">
-                          <img src="/images/productImages/<%= product.foto%>" class="image-product"/>
-                        </div>
-                        <div class="box-details">
-                          <div class="product-name"><%= product.name %></div>
-                          <div class="box-price">
-                            <div class="price-discount <% if (product.discount > 0){%>tachar-precio<%}%>">
-                              $<%= product.price %>
-                            </div>
-                            <% if (product.discount > 0){%>
-                              <div class="price">
-                                $<%= product.price - ((product.price / 100) * product.discount) %>
-                              </div>
-                              <%}%>
-                            </div>
-                            <% if (product.discount > 0){%>
-                              <div class="box-discount"><%= product.discount %>% OFF</div>
-                              <%}%>
-                              <div class="box-size-wine">
-                                  <div><%= product.size.name %></div>
-                              </div>
-                        </div>
+            <div class="recomendations-row">
+              <%products.forEach(product => {%>
+              <div class="box-product">
+                <a
+                  href="/products/detalles/<%= product.id %>"
+                  class="etiqueta-link"
+                >
+                  <div class="div-producto">
+                    <div class="contenedor-imagen-producto">
+                      <img
+                        src="/images/productImages/<%= product.foto%>"
+                        class="image-product"
+                      />
                     </div>
+                    <div class="box-details">
+                      <div class="product-name"><%= product.name %></div>
+                      <div class="box-price">
+                        <div
+                          class="price-discount <% if (product.discount > 0){%>tachar-precio<%}%>"
+                        >
+                          $<%= product.price %>
+                        </div>
+                        <% if (product.discount > 0){%>
+                        <div class="price">
+                          $<%= Math.floor( product.price - (product.price *
+                          product.discount) / 100 ) %>
+                        </div>
+                        <%}%>
+                      </div>
+                      <% if (product.discount > 0){%>
+                      <div class="box-discount">
+                        <%= product.discount %>% OFF
+                      </div>
+                      <%}%>
+                      <div class="box-size-wine">
+                        <div><%= product.size.name %></div>
+                      </div>
+                    </div>
+                  </div>
                 </a>
-            </div>
-  
-                <%})%>
               </div>
+
+              <%})%>
             </div>
-          </section>
-        </div>
-      
-
-    
+          </div>
+        </section>
+      </div>
     </main>
-    <%- include("../partials/footer.ejs") %> 
+    <%- include("../partials/footer.ejs") %>
   </body>
-
 </html>
