formularios de edicion y creacion funcionan 100%

--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -41,7 +41,7 @@
               <div class="boton-perfil">
                 <a href="/users/logout">
                   <button class="botones-edit-logout">Cerrar Sesión</button>
-                  </a>
+                </a>
               </div>
             </div>
           </div>
@@ -59,19 +59,17 @@
               <div class="perfil-category">Correo electrónico:</div>
               <div class="perfil-info"><%= user.email %></div>
             </div>
-            <% if(user.adress) {%> 
-              <div class="info-box">
-                <div class="perfil-category">Dirección:</div>
-                <div class="perfil-info"><%= user.adress %></div>
-              </div>
-              <% } %>
-              <% if(user.userName) {%> 
-                <div class="info-box">
-                  <div class="perfil-category">Usuario:</div>
-                  <div class="perfil-info"><%= user.userName %></div>
-                </div>
-              <% } %>
-            
+            <% if(user.adress) {%>
+            <div class="info-box">
+              <div class="perfil-category">Dirección:</div>
+              <div class="perfil-info"><%= user.adress %></div>
+            </div>
+            <% } %> <% if(user.userName) {%>
+            <div class="info-box">
+              <div class="perfil-category">Nombre de usuario:</div>
+              <div class="perfil-info"><%= user.userName %></div>
+            </div>
+            <% } %>
           </div>
         </div>
       </section>
